[package]
name = "illuminate-support"
version = "0.1.0"
edition = "2024"
authors = ["joseph@raubstudios.com"]
description = "Illuminate Support"
license = "MIT"

[dependencies]
serde_json = "1.0.140"
serde = "1.0.219"
illuminate-contracts ={ path = "../Contracts"}
illuminate-container ={ path = "../Container"}

[lints.rust]
dead_code = "allow"
unused = "allow"
