[package]
name = "illuminate-support"
version = "0.1.0"
edition = "2024"
authors = ["joseph@raubstudios.com"]
description = "Illuminate Support"
repository = "https://github.com/RaubJo/illuminate-support"
license = "MIT"

[dependencies]
serde_json = "1.0.140"
serde = "1.0.219"
illuminate-contracts ={ path = "../Contracts", version = "0.1.0"}
illuminate-container ={ path = "../Container", version = "0.1.0"}

[lints.rust]
dead_code = "allow"
unused = "allow"
